--- a/src/Pages/LandingPage.css
+++ b/src/Pages/LandingPage.css
@@ -1,18 +1,8 @@
 .landing-page {
-    min-height: 100vh;
     background: #f2f2f2;
-}
-
-.hero-section {
-    padding: 1rem 15rem;
-}
-
-.landing-page {
     min-height: 100vh;
-    background: #f2f2f2;
 }
 
-.hero-section {
-    padding: 1rem 15rem;
+.section-container:last-child {
+    margin-bottom: 0;
 }
-
