--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column; /* stack navbar and form */
   min-height: 100vh;
-  background-color: #eef2f7;
+  background: #f2f2f2;
 }
 
 .register-form {
