--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem 8rem;
+    padding: 0rem 2rem;
     background: transparent;
 }
 
@@ -14,7 +14,7 @@
 .logo-img {
     height: 112px;
     object-fit: contain;
-    padding-left: 150px;
+    padding-left: 0px;
 }
 
 .nav-links {
@@ -49,4 +49,22 @@
 
 .book-btn:hover {
     background: #2980b9;
+}
+
+.nav-actions {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.profile-icon {
+    width: 45px;
+    height: 45px;
+    object-fit: contain;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.profile-icon:hover {
+    transform: scale(1.1);
 }
