--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem 2rem;
+    padding: 0rem 8rem;
     background: transparent;
+    margin-right: 3rem;
 }
 
 .logo {
@@ -14,7 +15,7 @@
 .logo-img {
     height: 112px;
     object-fit: contain;
-    padding-left: 0px;
+    padding-left: 150px;
 }
 
 .nav-links {
@@ -52,19 +53,19 @@
 }
 
 .nav-actions {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
+  display: flex;
+  align-items: center;  
+  gap: 1rem;            
 }
 
-.profile-icon {
-    width: 45px;
-    height: 45px;
-    object-fit: contain;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+.dashboard-profile-icon {
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+  object-fit: contain;
+  transition: transform 0.3s ease;
 }
 
-.profile-icon:hover {
-    transform: scale(1.1);
+.dashboard-profile-icon:hover {
+  transform: scale(1.1);
 }
